--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -1,2 +1,26 @@
-<!-- your html code here -->
-<p>Hello, I'm the navbar.html</p>
+
+
+<nav class="navbar navbar-expand-lg bg-body-tertiary navbar-collapse navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Start Bootstrap</a>
+      <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"><i class="fa-solid fa-bars fa-beat"></i></span> 
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="#about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#service">Service</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#portfolio">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contact">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
