--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -1,5 +1,5 @@
 
-
+<div class="container-fluid">
 <nav class="navbar navbar-expand-lg bg-body-tertiary navbar-collapse navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Start Bootstrap</a>
@@ -24,3 +24,4 @@
       </div>
     </div>
   </nav>
+</div>
