actualizando el fondo de pagina

--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -1,2 +1,49 @@
-<!-- your html code here -->
-<p>Hello, I'm contact.html</p>
+ <section>
+
+
+        <!--Contact-->
+        <div class="m-5 p-5">
+            <h1>Contact</h1>
+            <p class="fs-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est fugit tempore officiis reiciendis quas ad fuga, nam a eius minima, unde molestias. Iure perferendis optio error, voluptas qui voluptate ipsam?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore voluptatem eveniet repudiandae ipsam id accusantium dolor ad facere quibusdam laboriosam autem, enim possimus sequi laudantium mollitia nostrum harum at asperiores?</p>
+        </div>
+
+
+        <!--Container-->
+        <div class=" border rounded-4 container bg-light">
+
+
+            <!--e-mail-->
+            <div class="row align-items-baseline text-end">
+                <div class="col-md-2 mt-3">
+                    <label for="e-mail">Your E-mail</label>
+                </div>
+                <div class="col-md-10">
+                    <input type="e-mail" class="form-control" id="e-mail" placeholder="Your email">
+                </div>
+            </div>
+
+
+            <!--Text-area-->
+            <div class="row align-items-baseline text-end">
+                <div class="col-md-2">
+                    <label for="message" class="form-label">Your message</label>
+                </div>
+                <div class="col-md-10 mt-3">
+                    <textarea class="form-control" id="message" rows="8"
+                        placeholder="Please enter your message here..."></textarea>
+                </div>
+            </div>
+
+
+            <!--Button-->
+            <div>
+                <div class="d-grid gap-2 d-md-flex justify-content-md-end my-3">
+                    <button class="btn btn-primary my-3 " type="button">Submit</button>
+                </div>
+            </div>
+        </div>
+        <div class="m-5 p-5">
+            <p>Copyright <i class="fa-regular fa-copyright"></i> Your Website 2024</p>
+        </div>
+
+    </section>
