--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -1,2 +1,40 @@
-<!-- your html code here -->
-<p>Hello, I'm the portfolio.html</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+</head>
+<body>
+    <div class="container-md">
+        <div class="row col-12 mx-3">
+            <div><h2>Portfolio</h2>
+            <div class="w-90"><p>Sollicitudin semper id facilisis magna egestas blandit commodo, elementum auctor porttitor pharetra euismod accumsan, ridiculus conubia vitae mi quis felis. Aptent purus in est turpis lacinia dis sociosqu sem diam. accumsan parturient interdum rhoncus justo laoreet venenatis maecenas quam, ornare duis ad pulvinar gravida mollis curabitur nec. Nam curabitur facilisi pellentesque congue urna, tristique posuere in eleifend.</p></div>
+            <div class="d-flex justify-content-between">
+                <div class="img col-3 mr-3 p-3"><img src="https://i.pinimg.com/736x/5c/38/b9/5c38b9d85845957e25111bd708b6d93e.jpg" class="w-100" alt="..."></div>
+                <div class="img mr-3 p-3 col-3"><img src="https://i.pinimg.com/736x/5c/38/b9/5c38b9d85845957e25111bd708b6d93e.jpg" class="w-100" alt="..."></div>
+                <div class="img mr-3 p-3 col-3"><img src="https://i.pinimg.com/736x/5c/38/b9/5c38b9d85845957e25111bd708b6d93e.jpg" class="w-100" alt="..."></div>
+            </div>
+            <div class="d-flex justify-content-between">
+                <div class="img col-3 mr-3 p-3">
+                    <h3 class="text-primary">Project Name</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit massa nascetur proin sollicitudin penatibus auctor, hac litora tincidunt tempus mattis facilisis a cum aptent montes enim.</p>
+                </div>
+                <div class="img col-3 mr-3 p-3">
+                    <h3 class="text-primary">Project Name</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit massa nascetur proin sollicitudin penatibus auctor, hac litora tincidunt tempus mattis facilisis a cum aptent montes enim.</p>
+                </div>
+                <div class="img col-3 mr-3 p-3">
+                    <h3 class="text-primary">Project Name</h3>
+                    <p>Lorem ipsum dolor sit amet consecgit tetur adipiscing elit massa nascetur proin sollicitudin penatibus auctor, hac litora tincidunt tempus mattis facilisis a cum aptent montes enim.</p>
+                </div>
+                
+            </div>
+        </div>    
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+</body>
