deleting style.css and using only bootstrap

--- a/website/templates/tagline.html
+++ b/website/templates/tagline.html
@@ -7,8 +7,8 @@
                 <img src="https://cdn.pixabay.com/photo/2019/01/28/16/21/sail-3960784_1280.jpg" class="card-img img-fluid img-bg" alt="new_york">
                 <div class="card-img-overlay">
                 
-                <h1 class="d-flex justify-content-center bg-white mt-5 headtext1">One Page Wonder</h1>
-                  <h2 class="d-flex justify-content-center bg-white headtext2">Will Know your Socks Off</h2>
+                <h1 class="d-flex justify-content-center bg-white mt-5 display-1">One Page Wonder</h1>
+                  <h2 class="d-flex justify-content-center bg-white display-3">Will Know your Socks Off</h2>
                 </div>
               </div>
         </div>
