--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -1,2 +1,18 @@
-<!-- your html code here -->
-<p>Hello, I'm the first_heading.html</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <div class="container row border-top pt-5 pb-5 d-flex bd-highlight">
+        <div class="col-9">
+            <h1>The First Headding <span class="text-secondary">Will Catch Your Eye</span></h1>
+            <p>Donec ullamcorper nulla non metus actor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. fusce dapibus, tellus ac cursus commodo.</p>
+        </div>
+        <div class="col-3">
+        <img src="assets/img/1.jpg/" style="width: 260px; height: auto;" class="rounded-circle">
+        </div>
+</body>
+</html>
