--- a/website/templates/services.html
+++ b/website/templates/services.html
@@ -1,3 +1,19 @@
-<!-- your html code here -->
-<p>Hello, I'm the services.html</p>
-<p>Hello, I'm the services section and I was loaded using ajax from templates/services.html</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <div class="container row border-top border-bottom pb-5 pt-5 d-flex bd-highlight"">
+        <div class="col-3">
+            <img src="assets/img/2.jpg/" style="width: 280px; height: auto;" class="rounded-circle">
+        </div> 
+        <div class="col-9">
+            <h1>The Second Headding <span class="text-secondary">Is Pretty Cool Too.</span></h1>
+            <p>Donec ullamcorper nulla non metus actor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. fusce dapibus, tellus ac cursus commodo.</p>
+        </div>       
+    </div>
+</body>
+</html>
