portfolio.html new version

--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -1,2 +1,49 @@
-<!-- your html code here -->
-<p>Hello, I'm the portfolio.html</p>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-sm-1"></div>
+    <div class="col-sm-10">
+      <h2>Portfolio</h2>
+        <p>Sollicitudin semper id facilisis magna egestas blandit commodo, elementum auctor porttitor pharetra euismod
+          accumsan, ridiculus conubia vitae mi quis felis. Aptent purus in est turpis lacinia dis sociosqu sem diam.
+          accumsan parturient interdum rhoncus justo laoreet venenatis maecenas quam, ornare duis ad pulvinar gravida
+          mollis curabitur nec. Nam curabitur facilisi pellentesque congue urna, tristique posuere in eleifend.</p>
+    </div>
+    <div class=" col-md-1 col-sm-1"></div>
+  </div>
+  <div class="row d-flex justify-content-center">
+      <div class="col-sm-12 col-md-4 my-2">
+        <div class="card">
+          <img src="https://i.pinimg.com/736x/5c/38/b9/5c38b9d85845957e25111bd708b6d93e.jpg" class="card-img-top"
+            alt="...">
+          <div class="card-body">
+            <h4>Portfolio1</h4>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-4 my-2">
+        <div class="card">
+          <img src="https://i.pinimg.com/736x/5c/38/b9/5c38b9d85845957e25111bd708b6d93e.jpg" class="card-img-top"
+            alt="...">
+          <div class="card-body">
+            <h4>Portfolio1</h4>
+            <p class="card-text fs-6">Some quick example text to build on the card title and make up the bulk of the
+              card's content.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-4 my-2">
+        <div class="card">
+          <img src="https://i.pinimg.com/736x/5c/38/b9/5c38b9d85845957e25111bd708b6d93e.jpg" class="card-img-top"
+            alt="...">
+          <div class="card-body">
+            <h4>Portfolio1</h4>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+          </div>
+        </div>
+      </div>
+  </div>
+
+</div>
