--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -1,2 +1,13 @@
 <!-- your html code here -->
-<p>Hello, I'm the first_heading.html</p>
+
+<div class="container mt-5 border-top border-bottom">
+<div class="row border-top pt-5 pb-5 d-flex bd-highlight">
+    <div class="col-sm-9 col-md-9">
+        <h1>The First Headding <span class="text-secondary">Will Catch Your Eye</span></h1>
+        <p>Donec ullamcorper nulla non metus actor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. fusce dapibus, tellus ac cursus commodo.</p>
+    </div>
+    <div class="col-sm-3 col-md-3">
+    <img src="assets/img/1.jpg/" class="rounded-circle w-75 h-auto mx-auto d-block">
+    </div>
+</div>
+</div>
