--- a/website/templates/services.html
+++ b/website/templates/services.html
@@ -1,3 +1,13 @@
 <!-- your html code here -->
-<p>Hello, I'm the services.html</p>
-<p>Hello, I'm the services section and I was loaded using ajax from templates/services.html</p>
+<div id="services"></div>
+<div class="container border-bottom mb-5 d-flex justify-content-center">
+<div class="row border-top border-bottom pb-5 pt-5 d-flex bd-highlight">
+    <div class="col-sm-3 col-md-3">
+        <img src="assets/img/2.jpg/" class="rounded-circle w-75 h-auto mb-4 mx-auto d-block">
+    </div> 
+    <div class="col-sm-8 col-md-9">
+        <h1>The Second Headding <span class="text-secondary">Is Pretty Cool Too.</span></h1>
+        <p>Donec ullamcorper nulla non metus actor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. fusce dapibus, tellus ac cursus commodo.</p>
+    </div>       
+</div>
+</div>
