--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -1,34 +1,34 @@
- <section>
+    <section>
 
 
         <!--Contact-->
-        <div class="m-5 p-5">
+        <div class="m-3 p-3">
             <h2>Contact</h2>
             <p class="fs-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est fugit tempore officiis reiciendis quas ad fuga, nam a eius minima, unde molestias. Iure perferendis optio error, voluptas qui voluptate ipsam?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore voluptatem eveniet repudiandae ipsam id accusantium dolor ad facere quibusdam laboriosam autem, enim possimus sequi laudantium mollitia nostrum harum at asperiores?</p>
         </div>
 
 
         <!--Container-->
-        <div class=" border rounded-4 container bg-light">
+        <div class=" border rounded-4 container bg-light col-10">
 
 
             <!--e-mail-->
-            <div class="row align-items-baseline text-end">
-                <div class="col-md-2 mt-3">
+            <div class="row text-end">
+                <div class=" col-5 col-sm-3 col-md-3  col-lg-2 mt-3 fs-5">
                     <label for="e-mail">Your E-mail</label>
                 </div>
-                <div class="col-md-10">
+                <div class="col-7 col-sm-9 col-md-9 col-lg-10 mt-3">
                     <input type="e-mail" class="form-control" id="e-mail" placeholder="Your email">
                 </div>
             </div>
 
 
             <!--Text-area-->
-            <div class="row align-items-baseline text-end">
-                <div class="col-md-2">
+            <div class="row text-end">
+                <div class=" col-5 col-sm-3 col-md-3  col-lg-2 mt-3 fs-5">
                     <label for="message" class="form-label">Your message</label>
                 </div>
-                <div class="col-md-10 mt-3">
+                <div class="col-7 col-sm-9 col-md-9 col-lg-10 mt-3">
                     <textarea class="form-control" id="message" rows="8"
                         placeholder="Please enter your message here..."></textarea>
                 </div>
@@ -42,8 +42,9 @@
                 </div>
             </div>
         </div>
-        <div class="m-5 p-5">
+        <div class="m-3 p-3">
             <p>Copyright <i class="fa-regular fa-copyright"></i> Your Website 2024</p>
         </div>
+
 
     </section>
