--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -1,3 +1,4 @@
+<!-- Portfolio -->  
 <div id="portfolio"></div>
 <div class="container-fluid">
   <div class="row">
@@ -14,8 +15,8 @@
   <div class="row d-flex justify-content-center">
       <div class="col-sm-12 col-md-4 my-2">
         <div class="card">
-          <img src="https://i.pinimg.com/736x/5c/38/b9/5c38b9d85845957e25111bd708b6d93e.jpg" class="card-img-top"
-            alt="...">
+          <img src="assets/img/big-project-image.png" class="card-img-top"
+            alt="card">
           <div class="card-body">
             <h4>Portfolio1</h4>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -25,7 +26,7 @@
       </div>
       <div class="col-sm-12 col-md-4 my-2">
         <div class="card">
-          <img src="https://i.pinimg.com/736x/5c/38/b9/5c38b9d85845957e25111bd708b6d93e.jpg" class="card-img-top"
+          <img src="assets/img/big-project-image.png" class="card-img-top"
             alt="...">
           <div class="card-body">
             <h4>Portfolio1</h4>
@@ -36,7 +37,7 @@
       </div>
       <div class="col-sm-12 col-md-4 my-2">
         <div class="card">
-          <img src="https://i.pinimg.com/736x/5c/38/b9/5c38b9d85845957e25111bd708b6d93e.jpg" class="card-img-top"
+          <img src="assets/img/big-project-image.png" class="card-img-top"
             alt="...">
           <div class="card-body">
             <h4>Portfolio1</h4>
